--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,10 @@
 ---
-import Navigation from "./Navigation.astro";
+import Hamburger from './Hamburger.astro';
+import Navigation from './Navigation.astro';
 ---
-
 <header>
-    <na>
-        <Navigation/>
-    </na>
+  <nav>
+    <Hamburger />
+    <Navigation />
+  </nav>
 </header>
