--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,5 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
-
+import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "About Me";
 const identity = {
     firstName: "W",
@@ -29,7 +26,7 @@ const textCase = "uppercase"
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
-        <style define:vars={{skillColor, fontWeight, textCase}}>
+        <style is:global define:vars={{skillColor, fontWeight, textCase}}>
             h1 {
                 color: purple;
                 font-size: 4rem;
@@ -42,8 +39,7 @@ const textCase = "uppercase"
         </style>
 	</head>
 	<body>
-        <Header/>
-		<h1>{pageTitle}</h1>
+        <BaseLayout pageTitle={pageTitle}>
         <h2>... and my new Astro site!</h2>
         <p>
             I am working through Astro's intruductory tutorial. This is the second page on my website, and it's the first one I built myself!
@@ -66,9 +62,6 @@ const textCase = "uppercase"
         {happy && <p>I am happy to be learning Astro!</p>}
         {finished && <p>I finished this tutorial!</p>}
         {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
-        <Footer/>
-        <script>
-			import "../scripts/menu.js"
-		</script>
+        </BaseLayout>
 	</body>
 </html>
