--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,5 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const pageTitle = "Home Page";
 ---
@@ -15,11 +13,8 @@ const pageTitle = "Home Page";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Header />
-		<h1>{pageTitle}</h1>
-		<Footer/>
-		<script>
-			import "../scripts/menu.js"
-		</script>
+		<BaseLayout pageTitle={pageTitle}>
+			<h2>My awesome blog subtitle</h2>
+		</BaseLayout>	
 	</body>
 </html>
